@@ -3,6 +3,10 @@
 
 	<bean id="manager" class="edu.mcw.rgd.dataload.ontologies.Manager">
         <property name="version" value="ONTOLOGY LOAD pipeline  -- build  2021-01-27" />
+
+        <!-- for security reasons, actual value of the API KEY should not be stored in public github code -->
+        <property name="apiKeyFile" value="properties/api.key"/>
+
         <property name="oboFiles"><!--key: default ontology ID; value: path to data file -->
             <map><!-- NOTE: if ontology is found at http://www.obofoundry.org/, its url will start
                    ...      https://raw.githubusercontent.com/...
@@ -15,7 +19,6 @@
                 <!-- daily snapshot release of go.obo, go-basic.obo -->
                 <entry key="GO" value="http://purl.obolibrary.org/obo/go/snapshot/go-basic.obo"/>
 
-                <!--<entry key="MP" value="http://ontologies.berkeleybop.org/mp.obo"/>-->
                 <entry key="MP" value="http://www.informatics.jax.org/downloads/reports/MPheno_OBO.ontology"/>
                 <!--<entry key="MP" value="https://build.obolibrary.io/job/obofoundry/job/pipeline-mp/job/master/lastSuccessfulBuild/artifact/src/ontology/mp.obo"/>-->
 
@@ -37,15 +40,12 @@
                 <entry key="NBO" value="http://ontologies.berkeleybop.org/nbo/nbo-simple.obo"/>
                 <entry key="HP" value="https://raw.githubusercontent.com/obophenotype/human-phenotype-ontology/master/hp.obo"/>
                 <entry key="CHEBI" value="ftp://ftp.ebi.ac.uk/pub/databases/chebi/ontology/chebi.obo"/>
-                <entry key="VT" value="http://data.bioontology.org/ontologies/VT/download/?apikey=8b5b7825-538d-40e0-9e9e-5ab9274a9aeb" />
-                <entry key="ORDO" value="http://data.bioontology.org/ontologies/ORDO_OBO/download/?apikey=8b5b7825-538d-40e0-9e9e-5ab9274a9aeb" />
+                <entry key="VT" value="http://data.bioontology.org/ontologies/VT/download/?apikey=##APIKEY##" />
+                <entry key="ORDO" value="http://data.bioontology.org/ontologies/ORDO_OBO/download/?apikey=##APIKEY##" />
                 <entry key="UBERON" value="http://ontologies.berkeleybop.org/uberon/basic.obo"/>
 
-                <!--<entry key="DO" value="http://ontologies.berkeleybop.org/doid/doid.obo" />-->
-                <!--<entry key="DO" value="https://raw.githubusercontent.com/DiseaseOntology/HumanDiseaseOntology/master/src/ontology/doid.obo" />-->
-
                 <entry key="EFO" value="https://www.ebi.ac.uk/efo/efo.obo"/>
-                <entry key="MI" value="http://data.bioontology.org/ontologies/MI/download/?apikey=8b5b7825-538d-40e0-9e9e-5ab9274a9aeb"/>
+                <entry key="MI" value="http://data.bioontology.org/ontologies/MI/download/?apikey=##APIKEY##"/>
                 <entry key="ZFA" value="http://ontologies.berkeleybop.org/zfa/zfa.obo"/>
                 <entry key="NCBITaxon" value="file:///tmp/ncbitaxon.obo"/>
                 <entry key="CVCL" value="ftp://ftp.expasy.org/databases/cellosaurus/cellosaurus.obo"/>
